--- a/Cortical-inspired image reconstruction via sub-Riemannian geometry and hypoelliptic diffusion/procs.tex
+++ b/Cortical-inspired image reconstruction via sub-Riemannian geometry and hypoelliptic diffusion/procs.tex
@@ -98,91 +98,51 @@
 \section{Introduction}
 
 
-\textcolor{magenta}{
-In the last two decades, PDE-based methods have been applied in many context in image processing and computer vision, as for example inpainting, smoothing and image compression problems, see e.g., \cite{GWWBBS,Tschum,Weickert}. The central role in these methods is frequently played by parabolic evolution PDEs in the form $\partial_t \psi = L\psi$, where, denoting by $(x,y)\in[0,1]\times[0,1]$ a point of the image and $t \ge 0$ an evolution parameter (time), $\psi(t,x,y)$ represents the greylevel of the desired interpolating image. Here, $L$ is some suitable differential operator $L$  as, e.g., the 2D Laplacian, although recently one of the main lines of investigation in this field regards \emph{anisotropic diffusions}. These are diffusions that, contrary to the latter, 
-% \textcolor{red}{the Laplacian,}  
-% \textcolor{blue}{the equation $\partial_t \psi = \Delta\psi$ or $\partial_t \psi = \Delta^n \psi$,}  
-present some privileged directions, the idea being that they should allow for better inpaintings or smoothing, due to their ability to adapt to the structure of the level lines
-% \textcolor{red}{the local properties} 
-% \textcolor{blue}{the location of level lines} 
-of the image.
-}
-% \textcolor{green}{CITATION from \cite{Tschum}: \quad 
-% Typically, the principal smoothing directions are chosen to be parallel to the image contours, resulting in an anisotropic regularization that does not destroy edges. 
-% As a requirement, deﬁning a correct smoothing behavior is one of the ﬁrst aim of a good regularization algorithm, the second being the precision of the smoothing process itself : it must respect the deﬁned smoothing geometry as much as possible. 
-% }
-Several examples of anisotropic (edge-enhancing) diffusions and their applications
-are presented in \cite{GWWBBS,Tschum}.
-
-In contrast to the anisotropic diffusions mentioned above, which is obtained by modulating the coefficients of a 2D diffusion, in this paper we review some results obtained by a different framework, modelled on the structure of the human primary visual cortex V1. in this framework, the image is lifted to a redundant representation in a 3D space, where the added direction encodes the direction of the level lines, and then it is subjected to a fixed coefficients diffusion. This allows for a deep exploitation of Fourier analysis techniques, and thus for fast numerical implementations.
-
-\textcolor{magenta}{
-In this paper, we review some results obtained via anisotropic diffusions acting on an higher dimensional space, modelled on the structure of the human primary visual cortex V1.
-This approach is inspired by a paradigm that dates back to the works of Hubel and Wiesel, Nobel prize winners in 1981, which showed that neurons of V1 are sensitive to visual stimuli at a given point of the retina and for a given direction \cite{hubel}. 
-\textcolor{red}{
-As a consequence, in contrast to the anisotropic diffusions mentioned above, the anisotropy of this anthropomorphic diffusion is not obtained by modulating the coefficients of a 2D diffusion, but by considering a fixed coefficients diffusion on a 3D space, where the added direction encodes the direction of the level lines. This allows for a deep exploitation of Fourier analysis techniques, and thus for fast numerical implementations.
-}
+Since the founding works of Petitot, Citti, and Sarti \cite{petitot,citti-sarti}, where the foundations of the mathematical model (known as Citti-Petitot-Sarti model, CPS model in short) of the human primary visual cortex V1 have been posed, many authors worked on developing and applying these ideas to image processing and computer vision \cite{Duits2010,Duits2010a,Sanguinetti,Bredies13,Hladky}. Indeed, the main concept at the basis of the CPS model, i.e., that images in our brains are processed via a redundant representation taking into account local features such as local orientation, presents a somewhat new framework in which many tasks can be strongly simplified.
 \textcolor{blue}{
-In contrast to the diffusions mentioned above, this approach yields a diffusion on a 3D space, where the added third varible encodes the direction of the level lines. 
-This allows for enhancing the effiect of the diffusion along the level lines and a deep exploitation of Fourier analysis techniques for fast numerical implementations.
-}
-}
+  More precisely, a neuron in the primary visual cortex is represented by a point  $(x,y,\theta)\in\mathbb R^2\times \mathbb P^1$, where $(x,y)\in\mathbb R^2$ is its spatial preference, and $\theta\in\mathbb P^1$ is its direction preference.
+  Then, an image on the visual plane, given by $f:\mathbb R^2\to \mathbb R$, is represented in the primary visual cortex by a distribution $\mathcal L f(x,y,\theta)=f(x,y)\delta_{Sf}(x,y,\theta)$, where $\delta_{Sf}$ is the Dirac mass of the surface $Sf\subset \mathbb R^2\times \mathbb P^1$. Here, $Sf$ is composed of the points $(x,y,\theta)$ such that $\theta\in\mathbb P^1$ is the direction of the level line of $f$ passing through $(x,y)\in\mathbb R^2$.
+  The structure of neuronal connections in V1 then implies that the initial cortical stimulus $\mathcal Lf$ evolves 
+%  In this redundant representation, cortical stimuli $\Psi:\mathbb R^2\times \mathbb P^1\to \mathbb R$ spontaneously evolve 
+  according to a heat-type equation $\partial_t \Psi=\Delta \Psi$, $\Psi|_{t=0}=\mathcal Lf$, where $\Delta$ is not the standard Euclidean Laplacian, but an hypoelliptic operator encoding the horizontal and vertical neuronal connections.
+  When the result of such 3D diffusion is projected back to the visual plane, we obtain a sort of anisotropic 2D diffusion that is very strong in the direction of the level lines of the image and very weak in the orthogonal one.}
+  
+  \textcolor{blue}{
+  The combination of the redundant representation and hypoelliptic diffusion is particularly efficient for image processing tasks as inpainting. Nowadays this is a challenging problem treated with many different techniques, see, e.g., \cite{Bertalmio2000,Bertalmio2001,Masnou2002,Chan2002,Criminisi2004a} and references therein.}
+%In view of the many well-studied examples of contour completion operated by the human brain (see Figure~\ref{fig:modal}), one of the main problems that was attacked from this point of view has been that of image reconstruction, also known as image inpainting \cite{Bertalmio2000,Masnou2002,Chan2002,Criminisi2004a}.
+In this survey, we present the results obtained in a series of works \cite{Boscain2012a, Remizov2013, Boscain2014, ahe, gros-papier} in this context. 
 
+\textcolor{blue}{
+It should be mentioned that efficient PDE-methods for image processing based on 2D anisotropic diffusions have been studied in various contexts. 
+In their simplest form, these methods use a 2D heat-like equation whose coefficients depend on the local structure of the image.  See, e.g., \cite{GWWBBS,Tschum}. 
+%As a consequence, they are not amenable to be treated via standard Fourier methods.
+We remark that the 2nd order Laplace-like operator appearing in these methods is anisotropic, but still elliptic.
+There exists also different approaches using non-linear evolutions or higher order PDEs.
+The method presented in this paper is deeply different, since the use of the cortical-inspired redundant representation allows to work with a 2nd order linear equation on a 3D space, and permits to consider an ``infinitely'' anisotropic (i.e., positive but not elliptic) equation. However, this equation is still hypoelliptic and can be efficiently solved via non-commutative Fourier analysis.}
+%It is outside the scope of this paper to compare the results obtained by our techniques with those obtained by these 2D anisotropic methods.}
 
-% \textcolor{blue}{
-% In the last two decades, PDE-based methods have led to a new field in image processing and computer vision,
-% including inpainting, smoothing and image compression problems, see e.g., \cite{GWWBBS,Tschum,Weickert}.
-% The central role in these methods belongs to evolution PDEs in the form $\partial_t \psi = L\psi$,
-% where $\psi(t,x,y)$ gives the desired interpolating function, $(x,y)$ is a point of the image and $t \ge 0$
-% is an evolution parameter (time). For inpainting, the evolution PDE is equipped with an initial and boundary
-% conditions which represents the initial data. Here $L$ is a linear or nonlinear operator which defines
-% the type of diffusion acting on the image.
-% For instance, one can consider $L=\Delta$, $L=\Delta^2$, $L=\Delta^3$,
-% %$L \psi = {\rm div} (g(|\nabla \psi|^2) \nabla \psi)$ with a special function $g$,
-% where $\Delta = \partial_x^2+\partial_y^2$.
-% }
-
-% \textcolor{blue}{
-% All the above examples are isotropic diffusions. This means that the effect of the diffusion in any direction is the same. For better quality of inpainting and smoothing, the idea is to reduce diffusion across level lines of the image, while still permitting it along them. Such diffusions are called anisotropic:
-% the effect of anisotropic diffusion is more strong in directions with large gradients of the image,
-% Several examples of anisotropic (edge-enhancing) diffusions and their applications
-% are presented in \cite{GWWBBS,Tschum}.
-% }
-
-% \textcolor{blue}{
-% In this paper, we present another type of anisotropic diffusion called {\it hypoelliptic}.
-% It is bio-mimetic in the sense that it replicates the way in which the human primary visual cortex V1 processes the signals arriving from the eyes.
-% This approach is inspired by a paradigm that dates back to the works of Hubel and Wiesel, Nobel prize winners in 1981. In contrast to anisotropic diffusions mentioned above, hypoelliptic diffusion acts not on the $(x,y)$-plane, but
-% on a 3-dimensional space, the projective tangent bundle of the plane.
-% This reflects the concept that neurons of V1 are sensitive to visual stimuli at a given point of the retina and for a given direction.
-% }
-
-
-Since the founding works of Petitot, Citti and Sarti \cite{petitot,citti-sarti}, where the foundations of the mathematical model (known as Citti-Petitot-Sarti model, CPS model in short) of the human primary visual cortex V1 have been posed, many authors worked on developing and applying these ideas to image processing and computer vision \cite{Duits2010,Duits2010a,Sanguinetti,Bredies13,Hladky}. Indeed, the main concept at the basis of the CPS model, i.e., that images in our brains are processed via a redundant representation taking into account local features as local orientation, presents a somewhat new framework in which many tasks can be strongly simplified.
-
-In view of the many well-studied examples of contour completion operated by the human brain (see Figure~\ref{fig:modal}), one of the main problems that was attacked from this point of view has been that of image reconstruction, also known as image inpainting \cite{Bertalmio2000,Masnou2002,Chan2002,Criminisi2004a}.
-In this survey, we present the results we obtained in a series of works \cite{Boscain2012a, Remizov2013, Boscain2014, ahe, gros-papier} in this context. The paper is divided in three parts, corresponding to different methods and purposes of image reconstruction.
+The paper is divided in three parts, corresponding to different methods and purposes of image reconstruction.
 
 In the first part, Section~\ref{s-petitot}, we introduce the geometry of the problem by describing the Citti-Petitot-Sarti model for reconstruction of curves, with some new ingredients introduced in \cite{Boscain2012a}. Although this simplified model is not very effective to reconstruct images partially corrupted (reconstructing an image level curve by level curve is a hopeless problem), it permits to understand easily the sub-Riemannian structure of V1, which will allow to introduce the hypoelliptic diffusion.
 
-\begin{figure}
-  \centering\raisebox{-0.5\height}{
-  \begin{minipage}[b]{.3\linewidth}
-    \centering\raisebox{-0.5\height}{\includegraphics[width=.9\textwidth]{imgs/kanisza.png}}
-    \subcaption{Modal completion (Kanisza triangle).}
-  \end{minipage}
-  }
-  \qquad
-  \centering\raisebox{-0.5\height}{
-  \begin{minipage}[b]{.3\linewidth}
-    \includegraphics[width=.9\textwidth]{imgs/amodal.png}
-    \vspace{1em}
-    \subcaption{Amodal completion.}
-  \end{minipage}
-  }
-  \caption{The two different neurophysiological types of contour completion.}
-  \label{fig:modal}
-\end{figure}
+%\begin{figure}
+%  \centering\raisebox{-0.5\height}{
+%  \begin{minipage}[b]{.3\linewidth}
+%    \centering\raisebox{-0.5\height}{\includegraphics[width=.9\textwidth]{imgs/kanisza.png}}
+%    \subcaption{Modal completion (Kanisza triangle).}
+%  \end{minipage}
+%  }
+%  \qquad
+%  \centering\raisebox{-0.5\height}{
+%  \begin{minipage}[b]{.3\linewidth}
+%    \includegraphics[width=.9\textwidth]{imgs/amodal.png}
+%    \vspace{1em}
+%    \subcaption{Amodal completion.}
+%  \end{minipage}
+%  }
+%  \caption{The two different neurophysiological types of contour completion.}
+%  \label{fig:modal}
+%\end{figure}
 
 Indeed, in Section~\ref{s-hypo}, we present an image inpainting algorithm obtained by building on the curve reconstruction methods of the first part. In particular, we show that, via stochastic considerations, the latter can be extended to image reconstruction by considering the hypoelliptic diffusion associated with the a sub-Riemannian structure of V1. Although not very efficient, this method allows to reconstruct images with small corruptions. The main interest of this technique is to simulate the reconstruction of images by the visual cortex and, as we will show in the next section, to produce very effective image inpainting algorithms when coupled with other techniques. Moreover, thanks to the exploitation of non-commutative harmonic analysis techniques, the final algorithm that we present has the twofold advantage of, on one side, being very fast and easy to parallelize, and on the other, of not needing nor exploiting any information on the location and shape of the corruption.
 
@@ -668,7 +628,6 @@ More precisely, it is divided in the following 4 steps (see Figure~\ref{fig:fina
 
 In Figure~\ref{fig:ahe-highly} we present the results obtained via the AHE algorithm on highly corrupted images. In particular, a comparison with Figure~\ref{fig:masking-highly} shows that the synthesis between the DR procedure and the varying coefficients, coupled with the averaging steps, yields much better results w.r.t.\ the simple application of the DR procedure.
 
-\textcolor{blue}{
 The presented inpainting techniques can be
 applied independently of the structure and the geometry
 of the corruption, although it requires the precise
@@ -681,7 +640,6 @@ one can achieve good reconstructions even for highly corrupted images.
 However, if the image contains large regions entirely composed of corrupted pixels, 
 the reconstructions are no longer satisfactory.
 This effect is discussed in \cite{ahe}.
-}
 
 
 
@@ -705,13 +663,25 @@ This effect is discussed in \cite{ahe}.
 \end{center}
 \end{figure*}
 
+{\color{blue}
+\section{Comparison with other methods}
 
+In this section we compare the results obtained by the algorithms presented in this paper with those obtained by two efficient PDE-based methods for inpainting. The problem of comparing the quality of two reconstructions is a difficult one. Here, we chose to simply compare the $L^2$ distances of the reconstructions $g$ to the ground truth $f$, normalized by the $L^2$ norm of the ground truth. That is, the quantity
+\begin{equation}\label{eq:dist-norm}
+  d( g):= \frac{ \|g-f\|_{L^2}}{\|f\|_{L^2}}.
+\end{equation}
+The results of this comparison are given in Figure~\ref{fig:comparison-facciolo}.
+
+\begin{figure}
+  \caption{Comparison of the $L^2$ (normalized) distance \eqref{eq:dist-norm} to the ground truth of the methods presented in this paper and those of \cite{cao,Facciolo}.}
+  \label{fig:comparison-facciolo}
+\end{figure}
+}
 
 \section{Conclusions}
 
 In this paper we presented several image inpainting algorithms based on hypoelliptic diffusion. Although pure hypoelliptic diffusion allows to obtain reasonable inpaints of images with small corrupted regions, we showed that coupling such diffusion with heuristic methods exploiting the full knowledge of the location of the corruption allows to obtain very efficient reconstructions. 
-\textcolor{blue}{
-Notice that the techniques presented in this paper can be applied to color images, simply by treating separately the three color channels. Some examples are provided in Figure~\ref{fig:color-images}.}
+Observe that the techniques presented in this paper can be applied to color images, simply by treating separately the three color channels. Some examples are provided in Figure~\ref{fig:color-images}.
 
 It is interesting to notice that when the image is so corrupted that our visual system is not able to recognize it, as it happens, for instance, for the corrupted image presented in Figure~\ref{fig:comparison}, the use of pure hypoelliptic diffusion does not help it.
 This fact can be interpreted as a validation of the CPS model with pure hypoelliptic diffusion. On the contrary, as already pointed out, both the DR procedure and the AHE algorithm produce reconstructions that go beyond the capabilities of our visual system.
