--- a/Cortical-inspired image reconstruction via sub-Riemannian geometry and hypoelliptic diffusion/procs.tex
+++ b/Cortical-inspired image reconstruction via sub-Riemannian geometry and hypoelliptic diffusion/procs.tex
@@ -663,42 +663,54 @@ This effect is discussed in \cite{ahe}.
 \end{center}
 \end{figure*}
 
-{\color{blue}
-\section{Comparison with other methods}
-
-In this section we compare the results obtained by the algorithms presented in this paper with those obtained by two efficient PDE-based methods for inpainting. The problem of comparing the quality of two reconstructions is a difficult one. Here, we chose to simply compare the $L^2$ distances of the reconstructions $g$ to the ground truth $f$, normalized by the $L^2$ norm of the ground truth. That is, the quantity
-\begin{equation}\label{eq:dist-norm}
-  d( g):= \frac{ \|g-f\|_{L^2}}{\|f\|_{L^2}}.
-\end{equation}
-The results of this comparison are given in Figure~\ref{fig:comparison-facciolo}.
-
-\begin{figure}
-  \caption{Comparison of the $L^2$ (normalized) distance \eqref{eq:dist-norm} to the ground truth of the methods presented in this paper and those of \cite{cao,Facciolo}.}
-  \label{fig:comparison-facciolo}
-\end{figure}
-}
+%{\color{blue}
+%\section{Comparison with other methods}
+%
+%In this section we compare the results obtained by the algorithms presented in this paper with those obtained by two efficient PDE-based methods for inpainting. The problem of comparing the quality of two reconstructions is a difficult one. Here, we chose to simply compare the $L^2$ distances of the reconstructions $g$ to the ground truth $f$, normalized by the $L^2$ norm of the ground truth. That is, the quantity
+%\begin{equation}\label{eq:dist-norm}
+%  d( g):= \frac{ \|g-f\|_{L^2}}{\|f\|_{L^2}}.
+%\end{equation}
+%The results of this comparison are given in Figure~\ref{fig:comparison-facciolo}.
+%
+%\begin{figure}
+%  \caption{Comparison of the $L^2$ (normalized) distance \eqref{eq:dist-norm} to the ground truth of the methods presented in this paper and those of \cite{cao,Facciolo}.}
+%  \label{fig:comparison-facciolo}
+%\end{figure}
+%}
 
 {\color{magenta}
 \section{Numerical experiments}
 
-In order to objectively evaluate the performance of the proposed algorithm, we chose, as in \cite{GWWBBS}, to use a $256\times 256$ cropped version of the Lena image. We consider the \emph{average absolute error (AEE)} and the \emph{mean squared error (MSE)}, given by
+In order to objectively evaluate the performance of the proposed algorithm, we consider, we compute the following quantities for the quality of a reconstruction $f$ of a corrupted version of an image $g$:
+\begin{equation}\label{eq:metric}
+  \widetilde{\operatorname{AAE}}(f,g) = \min_{a,b\in\mathbb R}\operatorname{AAE}(a f+b,g),\qquad
+  \widetilde{\operatorname{MSE}}(f,g) = \min_{a,b\in\mathbb R}\operatorname{MSE}(a f+b,g).
+\end{equation}
+Here, we used the \emph{average absolute error (AEE)} and the \emph{mean squared error (MSE)}, as in \cite{GWWBBS}, which are given by
 \begin{equation}
   \operatorname{AAE}(f,g) = \frac{1}{N}\sum_{i,j} |f_{i,j}-g_{i,j}|,\qquad
   \operatorname{MSE}(f,g) = \frac{1}{N}\sum_{i,j} |f_{i,j}-g_{i,j}|^2,
 \end{equation}
-where $N$ is the total number of pixels in the images $f=(f_{i,j})_{i,j}$ and $g=(g_{i,j})_{i,j}$. Then, our chosen metrics for the quality of a reconstruction $f$ of a corrupted version of the cropped Lena image $g$ are
-\begin{equation}
-  \widetilde{\operatorname{AAE}}(f,g) = \min_{a,b\in\mathbb R}\operatorname{AAE}(a f+b,g),\qquad
-  \widetilde{\operatorname{MSE}}(f,g) = \min_{a,b\in\mathbb R}\operatorname{MSE}(a f+b,g).
-\end{equation}
-This choice allows to take into account possible differences in scaling induced by the AHE algorithm. The results for randomly corrupted version of the starting image, with an increasing percentage of pixels removed, are presented in Figure~\ref{fig:graph}. 
+where $N$ is the total number of pixels in the images $f=(f_{i,j})_{i,j}$ and $g=(g_{i,j})_{i,j}$. 
+The purpose of the additional minimizing procedure in \eqref{eq:metric} is to take into account possible differences in scaling induced by the AHE algorithm. 
 
-We remark that, taking into account the fact that images in \cite{GWWBBS} are parametrized on the interval $[0,255]$ while we chose $[0,1]$, the values obtained for a $98\%$ corrupted image are $\widetilde{\operatorname{AAE}}(f,g)=14.9$ and $\widetilde{\operatorname{MSE}}(f,g)=556.7$. In particular, the first one is slightly worse than the algorithm proposed in \cite{GWWBBS}, while the second one is better.
+In Figure~\ref{fig:graph} we present the results obtained on a $256\times 256$ cropped version of the Lena image (the same used in \cite{GWWBBS}), with increasing percentages of corruption. 
+We remark that, taking into account the fact that images in \cite{GWWBBS} are parametrized on the interval $[0,255]$ while we chose $[0,1]$, the values obtained for a $98\%$ corrupted image are $\widetilde{\operatorname{AAE}}(f,g)=14.9$ and $\widetilde{\operatorname{MSE}}(f,g)=556.7$. (See Figure~\ref{fig:lena-AEE}.) In particular, the first one is slightly worse than the edge-enhancing diffusion presented in \cite[Table~1]{GWWBBS}, while the second one is better.
 
 \begin{figure}
-  \includegraphics[width=.4\textwidth]{graphAEE-MSE}
-  \caption{Results...}
-  \label{fig:graph}
+  \begin{minipage}{.4\textwidth}
+  \centering
+  \includegraphics[width=.9\textwidth]{imgs/graphAEE-MSE}
+  \caption{Quality of the reconstruction for a cropped version of Lena with increasing percentages of random corruption.}
+  \label{fig:graph}    
+  \end{minipage} 
+  \begin{minipage}{.55\textwidth}
+  \centering
+  \includegraphics[width=.4\textwidth]{imgs/lena-zoom-98-corr}$\quad$
+  \includegraphics[width=.4\textwidth]{imgs/lena-zoom-98-rec}
+  \caption{Reconstruction of cropped version of Lena with 98\% of pixels missing. Compare with \cite[Figure~1]{GWWBBS}.}
+  \label{fig:graph}    
+  \end{minipage}
 \end{figure}
 }
 
