--- a/Cortical-inspired image reconstruction via sub-Riemannian geometry and hypoelliptic diffusion/biblio.bib
+++ b/Cortical-inspired image reconstruction via sub-Riemannian geometry and hypoelliptic diffusion/biblio.bib
@@ -1,3 +1,14 @@
+@article{Bertalmio2001,
+author = {Ballester, C and Bertalm{\'{i}}o, Marcelo and Caselles, V and Sapiro, G and Verdera, J},
+journal = {Image Processing, IEEE Transactions on},
+number = {8},
+pages = {1200--1211},
+title = {{Filling-in by joint interpolation of vector fields and gray levels}},
+volume = {10},
+year = {2001}
+}
+
+
 @incollection {mumford,
     AUTHOR = {Mumford, David},
      TITLE = {Elastica and computer vision},
@@ -270,7 +281,6 @@ MRREVIEWER = {Igor D. Chueshov},
     AUTHOR = {Agrachev, Andrei and Barilari, Davide and Boscain, Ugo},
      TITLE = {Introduction to {R}iemannian and sub-{R}iemannian geometry ({L}ecture {N}otes), http://people.sissa.it/agrachev/agrachev\_files/notes.html},
      YEAR={2017},
-   JOURNAL = {},
    SERIES = {http://people.sissa.it/agrachev/agrachev\_files/notes.html }
 }
 
