--- a/Cortical-inspired image reconstruction via sub-Riemannian geometry and hypoelliptic diffusion/procs.tex
+++ b/Cortical-inspired image reconstruction via sub-Riemannian geometry and hypoelliptic diffusion/procs.tex
@@ -3,6 +3,8 @@
 
 \usepackage{amssymb,amsmath,mathrsfs,amsfonts,graphicx,epsf,color}
 
+\usepackage[T1]{fontenc}
+
 \usepackage{todonotes}
 \usepackage{subcaption}
 
