Updates from ShareLaTeX

--- a/Cortical-inspired image reconstruction via sub-Riemannian geometry and hypoelliptic diffusion/procs.tex
+++ b/Cortical-inspired image reconstruction via sub-Riemannian geometry and hypoelliptic diffusion/procs.tex
@@ -681,7 +681,7 @@ This effect is discussed in \cite{ahe}.
 %}
 
 {\color{magenta}
-\section{Numerical experiments}\label{sec:comparison}
+\section{Quality of reconstruction}\label{sec:comparison}
 
 An objective comparison of the quality of the reconstruction is a problem of well-known difficulty, see, for instance, [34, 40, 42]. Moreover, such
 a measure will forcibly depend on the expected application.
@@ -764,7 +764,7 @@ This fact can be interpreted as a validation of the CPS model with pure hypoelli
 \begin{figure}
   \includegraphics[height=4.0cm]{imgs/color1} \\ \vspace{.5em}
   \includegraphics[height=4.0cm]{imgs/color2}
-  \caption{Inpaintings of color images. \emph{From left to right:} the original image, the corrupted image used as input, the reconstructions obtained via the AHE algorithm.
+  \caption{Inpaintings of color images. \emph{From left to right:} the original image, the corrupted image used as input, the reconstructions obtained via the AHE algorithm. \emph{Top:} Madame Monet in a japanese costume, by C.\ Monet. \emph{Bottom:} Girl with a Pearl Earring, by J.\ Vermeer.
   }
   \label{fig:color-images}
 \end{figure}
